config-root/namespaces/jx/lighthouse-webui-plugin/lighthouse-webui-plugin-ingress.yaml
# Source: lighthouse-webui-plugin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lighthouse-webui-plugin
  labels:
    app.kubernetes.io/name: lighthouse-webui-plugin
    app.kubernetes.io/instance: "lighthouse-webui-plugin"
    helm.sh/chart: lighthouse-webui-plugin-0.1.9
    app.kubernetes.io/version: "0.1.9"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Jenkins X Lighthouse Dashboard
    nginx.ingress.kubernetes.io/auth-secret: jx-basic-auth-htpasswd
    nginx.ingress.kubernetes.io/auth-type: basic
    meta.helm.sh/release-name: 'lighthouse-webui-plugin'
    meta.helm.sh/release-namespace: 'jx'
  namespace: jx
spec:
  rules:
  - host: lighthouse-jx.jenkinsx.corp.angoo.io
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: lighthouse-webui-plugin
            port:
              name: http
